Fix collapsed responsive menu

--- a/sagenb/data/sage/less/worksheet.less
+++ b/sagenb/data/sage/less/worksheet.less
@@ -79,3 +79,9 @@
 	top: 0;
 	z-index: 99;
 }
+
+@media (max-width: 979px) {
+	#Jmol_zindex_fix {
+		display: none;
+	}
+}
